# api/swagger/index.yaml
@@ -73,6 +73,33 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /slack/oauth:
+    x-swagger-router-controller: slackController
+    get:
+      description: handles Slack app oauth
+      operationId: handleOAuth
+      tags:
+        - Slack
+      parameters:
+        - name: code
+          in: query
+          description: a temporary Slack oauth code
+          required: true
+          type: string 
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        "302":
+          description: Success
+          headers:
+            Location:
+              type: string
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /day:
     # binds a127 app logic to a route
     x-swagger-router-controller: soupCalendarController
